--- a/react-sneakers/src/components/Card/Card.module.scss
+++ b/react-sneakers/src/components/Card/Card.module.scss
@@ -3,6 +3,8 @@
     padding: 30px;
     width: 210px;
     border-radius: 40px;
+    margin-bottom: 30px;
+    margin-right: 30px;
     transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
     &:hover{
@@ -31,5 +33,8 @@
         font-size: 14px;
     }
 
+    .plus{
+        cursor: pointer;
+    }
     
 }
