--- a/react-sneakers/src/index.scss
+++ b/react-sneakers/src/index.scss
@@ -34,41 +34,7 @@ header{
         margin: 0;
     }
 }
-.card{
-    border: 1px solid #F3F3F3;
-    padding: 30px;
-    width: 210px;
-    border-radius: 40px;
-    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
-    &:hover{
-        box-shadow: 0px 20px 38px rgba(0, 0, 0, 0.06);
-        transform: translateY(-5px);
-
-    }
-
-    .favorite{
-        position: absolute;
-        cursor: pointer;
-    }
-
-    span{
-        font-size: 13px;
-        opacity: 0.5;
-        text-transform: uppercase;
-        font-size: 12px
-    }
-
-    b{
-        font-size: 14px;
-    }
-    h5{
-        font-weight: 400;
-        font-size: 14px;
-    }
-
-    
-}
 
 .button{
     background: #FFFFFF;
@@ -85,6 +51,16 @@ header{
     border: 1px solid #f3f3f3;
     border-radius: 10px;
     padding: 0 15px;
+    position: relative;
+
+    .clear{
+        position: absolute;
+        right: 0;
+        width: 18px;
+        height: 18px;
+        top: 14px;
+        right: 15px;
+    }
 
     input{
         border: 0;
