--- a/react-sneakers/src/index.scss
+++ b/react-sneakers/src/index.scss
@@ -125,6 +125,10 @@ header{
     .greenButton{
         position: relative;
 
+        &:disabled{
+            animation: button-loading 0.8s ease-in-out infinite;
+        }
+
         &:hover{
             img{
                 transform: translateX(5px);
@@ -152,6 +156,12 @@ header{
         font-weight: 500;
         cursor: pointer;
         transition: background 0.2s ease-in-out;
+
+        &:disabled{
+            background-color: #bebebe;
+            cursor: default;
+
+        }
 
 
 
@@ -214,9 +224,22 @@ header{
     .removeBtn{
         opacity: 0.5;
         cursor: pointer;
-        transition: opacity 0.15s ease-in-out;
+        
         &:hover{
             opacity: 1;
         }
     }
+}
+
+@keyframes  button-loading {
+    0%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0.7;
+    }
+    100%{
+        opacity: 1;
+    }
+    
 }
